feat: implement Docker PostgreSQL integration with complete CRUD validation
- Add Docker Compose configuration with PostgreSQL 15 and pgAdmin
- Configure Prisma ORM with PostgreSQL provider and User model
- Create initial database migration: init_user_model
- Implement database client with connection management and graceful shutdown
- Add comprehensive API endpoints for database operations:
  • /api/db/test - Database connection and schema validation
  • /api/db/validate - Full CRUD operations testing
  • Enhanced /api/health - Database status integration
- Create Docker management scripts in package.json
- Add database initialization scripts for container setup
- Implement persistent Docker volumes for data preservation
- Update documentation with Docker setup and usage instructions

Database Features:
✅ PostgreSQL 15 container with health checks
✅ Prisma ORM with TypeScript integration
✅ User model with CUID, email uniqueness, timestamps
✅ Complete CRUD validation (Create, Read, Update, Delete)
✅ Connection pooling and error handling
✅ Docker Compose with pgAdmin web interface

Resolves Issue #8: Configure PostgreSQL Database with Prisma ORM
Ready for NextAuth.js authentication integration (Issue #9)

Technical validation:
- All CRUD operations tested and working
- Database migrations applied successfully
- Docker containers healthy and persistent
- API endpoints operational with live database
- TypeScript compilation without errors

--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset",
+    "db:seed": "prisma db seed",
+    "db:studio": "prisma studio",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f postgres",
+    "docker:reset": "docker-compose down -v && docker-compose up -d"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.1",
     "next": "^14.2.0",
+    "prisma": "^6.16.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
