--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "docker:reset": "docker-compose down -v && docker-compose up -d"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.16.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "next": "^14.2.0",
+    "next-auth": "^4.24.11",
     "prisma": "^6.16.1",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
