--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "typecheck": "tsc --noEmit",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -21,12 +22,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "^6.16.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "next": "^14.2.0",
     "next-auth": "^4.24.11",
-    "prisma": "^6.16.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "zod": "^4.1.8"
@@ -40,6 +40,7 @@
     "eslint-config-next": "^14.2.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.0",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
   }
