--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^3.0.2",
     "next": "^14.2.0",
     "next-auth": "^4.24.11",
+    "node-html-parser": "^7.0.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "zod": "^4.1.8"
