--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "next-pwa": "^5.6.0",
