--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f postgres",
-    "docker:reset": "docker-compose down -v && docker-compose up -d"
+    "docker:reset": "docker-compose down -v && docker-compose up -d",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -47,6 +48,7 @@
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.0",
     "prisma": "^6.16.2",
+    "supabase": "^2.40.7",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
   }
