--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-html-parser": "^7.0.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "zod": "^4.1.8"
   },
   "devDependencies": {
